practice04
http://www.codecodex.com/wiki/Calculate_a_triangle_number#OCaml

#  let triangle_numbers n = Array.init n (fun i -> i*(i+1)/2);;
val triangle_numbers : int -> int array = <fun>

# triangle_numbers 100;;
- : int array =
[|0; 1; 3; 6; 10; 15; 21; 28; 36; 45; 55; 66; 78; 91; 105; 120; 136; 153;
  171; 190; 210; 231; 253; 276; 300; 325; 351; 378; 406; 435; 465; 496; 528;
  561; 595; 630; 666; 703; 741; 780; 820; 861; 903; 946; 990; 1035; 1081;
  1128; 1176; 1225; 1275; 1326; 1378; 1431; 1485; 1540; 1596; 1653; 1711;
  1770; 1830; 1891; 1953; 2016; 2080; 2145; 2211; 2278; 2346; 2415; 2485;
  2556; 2628; 2701; 2775; 2850; 2926; 3003; 3081; 3160; 3240; 3321; 3403;
  3486; 3570; 3655; 3741; 3828; 3916; 4005; 4095; 4186; 4278; 4371; 4465;
  4560; 4656; 4753; 4851; 4950|]
#

# let rec e ?(fact=1) ?(i=1) = function
    | 0 -> 0.
        | n -> 1. /. float fact +. e ~fact:(i*fact) ~i:(i+1) (n-1);;
val e : ?fact:int -> ?i:int -> int -> float = <fun>
# e 20;;
- : float = 2.7182818284590451
#



# let rec merge = function
    | list, []
    | [], list -> list
    | h1::t1, h2::t2 ->
        if h1 <= h2 then
          h1 :: merge (t1, h2::t2)
        else
                h2 :: merge (h1::t1, t2)
          ;;
  ;;
val merge : 'a list * 'a list -> 'a list = <fun>
#  merge_sort [6; 7; 0; 8; 3; 2; 4; 9; 5; 1];;
Characters 1-11:
   merge_sort [6; 7; 0; 8; 3; 2; 4; 9; 5; 1];;
   ^^^^^^^^^^
Error: Unbound value merge_sort
# let rec halve = function
    | []
        | [_] as t1 -> t1, []
    | h::t ->
            let t1, t2 = halve t in
            h::;;
Characters 119-121:
            h::;;
               ^^
Error: Syntax error
# let rec halve = function
    | []
        | [_] as t1 -> t1, []
    | h::t ->
            let t1, t2 = halve t in
          h::t2, t1
      ;;
val halve : 'a list -> 'a list * 'a list = <fun>
# let rec merge_sort = function
    | []
        | [_] as list -> list
    | list ->
        let l1, l2 = halve list in
              merge (merge_sort l1, merge_sort l2)
    ;;
val merge_sort : 'a list -> 'a list = <fun>

# merge_sort [6; 7; 0; 8; 3; 2; 4; 9; 5; 1];;
- : int list = [0; 1; 2; 3; 4; 5; 6; 7; 8; 9]
#


